--- a/iphone/UserLoginAndRegistration/UserLoginAndRegistration/Main.storyboard
+++ b/iphone/UserLoginAndRegistration/UserLoginAndRegistration/Main.storyboard
@@ -17,7 +17,7 @@
                     </tabBar>
                     <connections>
                         <segue destination="GwN-pN-eLh" kind="relationship" relationship="viewControllers" id="jjm-oW-MfG"/>
-                        <segue destination="RKz-Mt-eJM" kind="relationship" relationship="viewControllers" id="gkK-MF-0k8"/>
+                        <segue destination="3Lc-dZ-GRx" kind="relationship" relationship="viewControllers" id="gkK-MF-0k8"/>
                         <segue destination="xgt-Ut-KOU" kind="relationship" relationship="viewControllers" id="Zhc-OM-f5G"/>
                     </connections>
                 </tabBarController>
@@ -25,97 +25,35 @@
             </objects>
             <point key="canvasLocation" x="416" y="223"/>
         </scene>
-        <!--Cart-->
+        <!--View Controller-->
         <scene sceneID="vg9-Be-its">
             <objects>
                 <viewController id="RKz-Mt-eJM" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="iAr-gY-geY"/>
-                        <viewControllerLayoutGuide type="bottom" id="Yst-J6-eu8"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="yic-GZ-Eeo">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="82" sectionHeaderHeight="28" sectionFooterHeight="28" id="hz4-hq-fgj">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="66" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="KlX-4x-QJe">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <label key="tableFooterView" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Total: " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="kb6-Dr-ZOs">
-                                    <rect key="frame" x="0.0" y="88" width="320" height="44"/>
-                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                    <nil key="highlightedColor"/>
-                                </label>
-                                <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="MealTableViewCell" id="5EB-Es-fpr" customClass="MealTableViewCell" customModule="UserLoginAndRegistration" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="22" width="320" height="66"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="5EB-Es-fpr" id="Kwp-r4-YR0">
-                                            <rect key="frame" x="0.0" y="0.0" width="320" height="65"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" image="Image" translatesAutoresizingMaskIntoConstraints="NO" id="Ml3-nK-cbe">
-                                                    <rect key="frame" x="-6" y="0.0" width="100" height="66"/>
-                                                </imageView>
-                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" fixedFrame="YES" text="Beef" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CIU-LK-YO5">
-                                                    <rect key="frame" x="108" y="0.0" width="122" height="37"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" fixedFrame="YES" text="9.99" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VjK-pg-gu9">
-                                                    <rect key="frame" x="108" y="38" width="122" height="28"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="11"/>
-                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wuI-qO-pD1">
-                                                    <rect key="frame" x="218" y="20" width="25" height="25"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="39"/>
-                                                    <state key="normal" title="-"/>
-                                                    <connections>
-                                                        <action selector="minusButtonTapped:" destination="5EB-Es-fpr" eventType="touchUpInside" id="wMF-H5-9Po"/>
-                                                    </connections>
-                                                </button>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Ja-zf-sNe">
-                                                    <rect key="frame" x="243" y="24" width="42" height="21"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4MR-gb-KVP">
-                                                    <rect key="frame" x="287" y="20" width="25" height="25"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="39"/>
-                                                    <state key="normal" title="+"/>
-                                                    <connections>
-                                                        <action selector="plusButtonTapped:" destination="5EB-Es-fpr" eventType="touchUpInside" id="cja-Zg-vTZ"/>
-                                                    </connections>
-                                                </button>
-                                            </subviews>
-                                        </tableViewCellContentView>
-                                        <connections>
-                                            <outlet property="name" destination="CIU-LK-YO5" id="ypf-bE-VWp"/>
-                                            <outlet property="number" destination="2Ja-zf-sNe" id="gFv-8l-6Hc"/>
-                                            <outlet property="photo" destination="Ml3-nK-cbe" id="J9K-cf-ctI"/>
-                                            <outlet property="price" destination="VjK-pg-gu9" id="zUb-3q-1Gf"/>
-                                        </connections>
-                                    </tableViewCell>
-                                </prototypes>
-                                <connections>
-                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="6UG-Hi-DMO"/>
-                                    <outlet property="delegate" destination="BYZ-38-t0r" id="zSS-HV-HLU"/>
-                                </connections>
-                            </tableView>
-                        </subviews>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="Cart" image="Cart" selectedImage="CartClick" id="q1b-hL-eH0"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="MealTableViewCell" rowHeight="82" id="ed3-Y4-BlG">
+                                <rect key="frame" x="0.0" y="92" width="320" height="82"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="ed3-Y4-BlG" id="HlI-Wk-Bwk">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="81"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="RKz-Mt-eJM" id="kr8-ds-USa"/>
+                            <outlet property="delegate" destination="RKz-Mt-eJM" id="alb-Qz-3Au"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="ooj-xm-jL6"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="v9R-PB-i0Z" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="416" y="983"/>
+            <point key="canvasLocation" x="948" y="983"/>
         </scene>
         <!--Account-->
         <scene sceneID="ivb-zC-72s">
@@ -153,7 +91,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TnO-4A-AZE" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="983" y="983"/>
+            <point key="canvasLocation" x="1515" y="983"/>
         </scene>
         <!--Menu-->
         <scene sceneID="tne-QT-ifu">
@@ -460,7 +398,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5jE-bK-iwm" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1488" y="969"/>
+            <point key="canvasLocation" x="2020" y="969"/>
         </scene>
         <!--Menu-->
         <scene sceneID="51D-S3-cPc">
@@ -480,6 +418,25 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="okl-Bc-nRp" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="983" y="223"/>
+        </scene>
+        <!--Cart-->
+        <scene sceneID="1hg-dD-j4v">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="3Lc-dZ-GRx" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Cart" image="Cart" selectedImage="CartClick" id="q1b-hL-eH0"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Qyf-jr-W63">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="RKz-Mt-eJM" kind="relationship" relationship="rootViewController" id="V5d-Vy-CLt"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="WvV-Hp-RtC" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="416" y="983"/>
         </scene>
     </scenes>
     <resources>
